--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ bench = false
 path = "src/main.rs"
 name = "tsp"
 
+[profile.release]
+debug = true
+
 [dependencies]
 rand = "*"
 clippy = "*"
+rayon = "*"
